--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -18,7 +18,7 @@
 {% block content %}
 
 <main class="improve_cash_flow-page">
-  <section class="section-welcome">
+  <section class="section-welcome fadein">
     <div class="section-welcome__banner">
       <img src="/assets/img/improve_cash_flow/banner.png">
     </div>
@@ -38,12 +38,12 @@
     </div>
   </section>
 
-  <section class="section-primary">
+  <section class="section-primary fadein">
     <div class="container-1200">
       <h2 class="ttl-secondary">こんなニーズやお悩みはありませんか?</h2>
 
       <div class="section-wrapper">
-        <div class="section-item">
+        <a href="#" class="section-item">
           <div class="title">資金繰りを改善したい</div>
           <div class="content">
             <div class="image">
@@ -64,15 +64,13 @@
             </div>
           </div>
           <div class="action">
-            <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11.098" height="11.098" viewBox="0 0 11.098 11.098" fill="#fff">
-                <path id="arrow" d="M6.847,0V6.847H0" transform="translate(5.549) rotate(45)" fill="none"
-                  stroke="#fff" stroke-width="2" />
-              </svg>
-            </a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="11.098" height="11.098" viewBox="0 0 11.098 11.098" fill="#fff">
+              <path id="arrow" d="M6.847,0V6.847H0" transform="translate(5.549) rotate(45)" fill="none"
+                stroke="#fff" stroke-width="2" />
+            </svg>
           </div>
-        </div>
-        <div class="section-item">
+        </a>
+        <a href="#" class="section-item">
           <div class="title">資金調達をしたい</div>
           <div class="content">
             <div class="image">
@@ -93,19 +91,17 @@
             </div>
           </div>
           <div class="action">
-            <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11.098" height="11.098" viewBox="0 0 11.098 11.098" fill="#fff">
-                <path id="arrow" d="M6.847,0V6.847H0" transform="translate(5.549) rotate(45)" fill="none"
-                  stroke="#fff" stroke-width="2" />
-              </svg>
-            </a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="11.098" height="11.098" viewBox="0 0 11.098 11.098" fill="#fff">
+              <path id="arrow" d="M6.847,0V6.847H0" transform="translate(5.549) rotate(45)" fill="none"
+                stroke="#fff" stroke-width="2" />
+            </svg>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
 
-  <section class="section-secondary">
+  <section class="section-secondary fadein">
     <div class="container-1200">
       <h2 class="ttl-secondary">資金繰り改善や資金調達をもっと手軽に</h2>
 
@@ -123,7 +119,7 @@
 
               <div class="flex gap30 aiC sp-reverse">
                 <div class="sec-left-wrapper visa">
-                  <figure class="sec__img"><img src="/assets/img/common/cash-flow.png" alt=""></figure>
+                  <figure class="sec__img w-full"><img class="w-full" src="/assets/img/common/cash-flow.png" alt=""></figure>
                 </div>
 
                 <div class="gap-10 sec-right-wrapper visa">
@@ -236,43 +232,42 @@
                 MONEY CARDとは、キャッシングリボ専用のローンカードです。全国の郵便局をはじめ、都市銀行、地方銀行、信用金庫、コンビニなどに設置のATMで、ご利用可能枠の範囲内で繰り返しご利用いただけます。<strong>資金使途は事業性用途としてもご利用可能。余裕のある融資枠をご用意しています。</strong>
               </dd>
 
-              <div class="flex gap50 aiC sp-reverse">
+              <div class="flex gap60 aiC sp-reverse">
                 <div class="sec-left-wrapper">
-                  <figure class="sec__img"><img src="/assets/img/common/saison-03.png" alt=""></figure>
+                  <figure class="sec__img">
+                    <div><img src="/assets/img/common/saison-03.png"></div>
+                  </figure>
                 </div>
-
                 <div class="gap-10 sec-right-wrapper">
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
+                  <dl class="flex aic gap30 sec01-right-box">
+                    <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">1</div>
-                      <h5 class="ttl-senary"><span class="yellow-bottom">全国のコンビニ・ATM</span>でご利用可能（ATM手数料は何度でも無料）</h5>
+                      <h5 class="ttl-senary">
+                        全国のコンビニ・ATM<span class="yellow-bottom">でご利用可能</span><span style="font-size: 16px">（ATM手数料は何度でも無料）</span>
+                      </h5>
                     </dt>
                   </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
+                  <dl class="flex aic gap30 sec01-right-box">
+                    <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">2</div>
-                      <h5 class="ttl-senary">
-                        ご指定の口座<span class="yellow-bottom">
-                        に最短数十秒で振り込み</span>
+                      <h5 class="ttl-senary">ご指定の口座に
+                        <span class="yellow-bottom">最短数十秒で振り込み</span>
                       </h5>
                     </dt>
                   </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
+                  <dl class="flex aic gap30 sec01-right-box">
+                    <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">3</div>
-                      <h5 class="ttl-senary">
-                        ご利用用途は自由。<span class="yellow-bottom">ご利用可能枠：最大300万円</span>
+                      <h5 class="ttl-senary">ご利用用途は自由。
+                        <span class="yellow-bottom">ご利用可能枠：最大300万円</span>
                       </h5>
                     </dt>
                   </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
+                  <dl class="flex aic gap30 sec01-right-box">
+                    <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">4</div>
                       <h5 class="ttl-senary">新規のご契約&ご利用で、
-                        <span class="yellow-bottom">最大2ヵ月分のご利息を キャッシュバック </span>
+                        <span class="yellow-bottom">最大2ヵ月分のご利息をキャッシュバック</span>
                       </h5>
                     </dt>
                   </dl>
@@ -281,7 +276,6 @@
 
               <a href="#" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
             </div>
-
           </div>
         </div>
       </div>
@@ -316,6 +310,44 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="section-subinfo fadein">
+    <div class="sub-infos">
+      <div class="containers">
+        ※「アメリカン・エキスプレス」は、アメリカン・エキスプレスの登録商標です。(株)クレディセゾンは、アメリカン・エキスプレスのライセンスに基づき使用しています。
+      </div>
+    </div>
+  </section>
+
+  <section id="inquiry-application" class="section-loan-conditions fadein">
+    <div class="container">
+      <ul class="external-list">
+        <li class="external-item">
+          <a class="external-item-link" href="#">
+            {% include 'component/icons/circle-list-style.njk' %}
+            カードキャッシングご利用に関するお知らせ
+          </a>
+        </li>
+        <li class="external-item">
+          <a class="external-item-link" href="#">
+            {% include 'component/icons/circle-list-style.njk' %}
+            貸付条件表はこちら
+          </a>
+        </li>
+      </ul>
+
+      <ul class="loan-condition-list">
+        <h4 class="loan-condition-title">貸付条件をよくご確認のうえ、計画的にご利用ください。</h4>
+
+        <li class="loan-condition-item">※ 審査によりご希望の意に添えない場合がございます。あらかじめご了承ください。</li>
+        <li class="loan-condition-item">※ お申し込みからご融資まで1週間～10日程度かかります。</li>
+        <li class="loan-condition-item">※ 所得証明書類（コピー）の提出が必要となります。</li>
+        <li class="loan-condition-item">※ キャッシングご利用可能枠の上限は年収の1/3以内です。</li>
+        <li class="loan-condition-item">※ お申し込みにあたり、運転免許証等の交付を受けている場合には運転免許証等の番号が必要です。</li>
+        <li class="loan-condition-item">※ 本ページ記載の情報は2023年3月1日現在のものです。変更になる場合もございますので、あらかじめご了承ください。</li>
+      </ul>
     </div>
   </section>
 </main>
