--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -43,7 +43,7 @@
       <h2 class="ttl-secondary">こんなニーズやお悩みはありませんか?</h2>
 
       <div class="section-wrapper">
-        <a href="#" class="section-item">
+        <a href="#cash-flow" class="section-item">
           <div class="title">資金繰りを改善したい</div>
           <div class="content">
             <div class="image">
@@ -70,7 +70,7 @@
             </svg>
           </div>
         </a>
-        <a href="#" class="section-item">
+        <a href="#funding" class="section-item">
           <div class="title">資金調達をしたい</div>
           <div class="content">
             <div class="image">
@@ -106,7 +106,7 @@
       <h2 class="ttl-secondary">資金繰り改善や資金調達をもっと手軽に</h2>
 
       <div class="panel-primary">
-        <div class="cat">資金繰り改善サポート</div>
+        <div id="cash-flow" class="cat">資金繰り改善サポート</div>
 
         <div class="notification-panel2">
           <div class="relation">
@@ -144,7 +144,7 @@
       </div>
 
       <div class="panel-secondary">
-        <div class="cat">資金調達サポート</div>
+        <div id="funding" class="cat">資金調達サポート</div>
 
         <div class="notification-panel2">
           <div class="relation">
