--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -194,8 +194,8 @@
                   <img src="/assets/img/common/img-welfare-preview.png" alt="">
               </div>
 
+              <div class="arrow"></div>
               <div class="welfare-more-tooltip">
-                <h2></h2>
                 <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
               </div>
             </div>
