--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -16,13 +16,12 @@
       padding: 35px;
     }
 
-
     .ttl-primary {
       font-size: 42px;
       margin-bottom: 31px;
       text-align: left;
       line-height: 1;
-      color: #FFFFFF;
+      color: #ffffff;
       text-shadow: 2px 1px 12px rgba(0, 0, 0, 0.5);
     }
 
@@ -156,7 +155,11 @@
 
       .yellow-bottom {
         font-weight: 600;
-        background: linear-gradient(to bottom, transparent 70%, $yellow-color 30%);
+        background: linear-gradient(
+          to bottom,
+          transparent 70%,
+          $yellow-color 30%
+        );
         display: inline;
       }
     }
@@ -169,15 +172,15 @@
         border-radius: 4px;
         padding: 0 15px;
         background-color: #fff;
-        box-shadow: 2px 2px 6px rgba(0,0,0,.5);
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 
         .relation {
           border: 1px solid #ffffff;
 
           .single__ttl {
             top: -20px;
-            color: #0297B5;
-            background-color: #E5F4F8;
+            color: #0297b5;
+            background-color: #e5f4f8;
           }
         }
 
@@ -194,17 +197,17 @@
                 width: 100%;
               }
 
-              border: 1px solid #24A4A4;
+              border: 1px solid #24a4a4;
 
               .cat {
                 padding: 15px 15px;
-                background-color: #24A4A4;
+                background-color: #24a4a4;
               }
 
               .circle-list {
-                background-color: #FFFFFF;
+                background-color: #ffffff;
                 @media #{$sp} {
-                 font-size: 14px;
+                  font-size: 14px;
                 }
               }
             }
@@ -221,7 +224,7 @@
         border-radius: 4px;
         padding: 0 15px 60px;
         background-color: #fff;
-        box-shadow: 2px 2px 6px rgba(0,0,0,.5);
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 
         .relation {
           border: 1px solid #ffffff;
@@ -229,8 +232,8 @@
           .single__ttl {
             position: relative;
             top: -20px;
-            color: #0297B5;
-            background-color: #E5F4F8;
+            color: #0297b5;
+            background-color: #e5f4f8;
           }
 
           dd {
@@ -248,7 +251,7 @@
             align-items: center;
             @media #{$sp} {
               padding: 0px;
-              flex-direction: column
+              flex-direction: column;
             }
 
             .img-circle {
@@ -262,7 +265,7 @@
               flex-shrink: 0;
 
               @media #{$sp} {
-                width: calc( 100% - 20px);
+                width: calc(100% - 20px);
               }
             }
 
@@ -270,11 +273,11 @@
               width: calc(22% - 20px);
 
               @media #{$sp} {
-                width: calc( 100% - 20px);
+                width: calc(100% - 20px);
               }
               flex-shrink: 0;
               .default_btn {
-                background-color: #0297B5;
+                background-color: #0297b5;
                 color: #ffffff;
                 border-radius: 3px;
               }
@@ -290,11 +293,11 @@
               flex-shrink: 0;
               text-align: left;
               padding: 20px;
-              background-color: #FFFFFF;
-              box-shadow: 2px 2px 6px rgba(0,0,0,.5);
+              background-color: #ffffff;
+              box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 
               @media #{$sp} {
-                width: calc( 100% - 20px);
+                width: calc(100% - 20px);
               }
 
               .welfare-more-tooltip__content {
@@ -306,7 +309,7 @@
                 background-color: #fff;
                 border-radius: 3px;
                 padding: 10px 20px;
-  
+
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -472,6 +475,21 @@
           background-color: #fff;
         }
       }
+    }
+  }
+
+  .section-contact2 .tooltip {
+    left: calc(50% - 241px);
+
+    @media #{$sp} {
+      top: -110px;
+      left: calc(50% - 183px);
+    }
+  }
+
+  .section-contact2 .tooltip .tooltip__content {
+    @media #{$sp} {
+      white-space: pre;
     }
   }
 }
