--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -282,52 +282,35 @@
     </div>
   </section>
 
-  <section class="section-quaterary">
-    <div class="container-1200">
-      <div class="card-type21">
-        <div class="ttl-tertiary-wrapper">
-          <h3 class="ttl-tertiary border-bottom">法定外福利厚生サービスをご検討中の事業者様へ</h3>
+  <section id="application" class="section-contact2 fadein">
+    <div class="card-type22">
+      <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
+        <div class="tooltip">
+          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ<" | safe}}/h4>
         </div>
-
-        <h2 class="ttl-secondary">
-          「従業員の満足度を高めて人材が定着する会社に</h2>
-
-        <h3 class="ttl-tertiary fw-normal">
-          企業が法定外福利厚生を独自にどれだけ導入をしているかが、福利厚生における充実度を決めるポイントとなります。
-          <strong>従業員が定着し、高いパフォーマンスで業務を行える</strong>よう法定外福利厚生サービスの導入を検討してみませんか？
-        </h3>
-
-        <div class="flex gap60 card-list">
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい資料が欲しい」
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="orange_more small show-arrow">サービス資料ダウンロード</a>
+      </h3>
+      <div class="useful-wp container">
+        <p class="description">
+          企業が法定外福利厚生を独自にどれだけ導入をしているかが、福利厚生における充実度を決めるポイントとなります。</br>
+          従業員が定着し、高いパフォーマンスで業務を行えるよう法定外福利厚生サービスの導入を検討してみませんか?
+        </p>
+        <div class="containers">
+          <div class="flex jcC gap60">
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">「詳しい資料が欲しい」</br>という方はこちら</div>
+                <div><a href="#" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+              </summary>
           </div>
-
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい話を聞きたい」「相談したい」
-
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="orange_more small show-arrow">サポート担当に無料で相談する</a>
+          <div href="#" class="card">
+            <summary class="card__box">
+              <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
+              <div><a href="#" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
+            </summary>
           </div>
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="breadcrumb">
-    <ul class="flex">
-      <li>
-        <a href="#">TOP</a>
-      </li>
-      <li>
-        <a href="#">資金繰りを改善したい</a>
-      </li>
-    </ul>
   </section>
 </main>
 {% endblock %}
